--- a/index.html
+++ b/index.html
@@ -9,50 +9,50 @@
     <style>
         :root { --primary: #673ab7; --gold: #d4af37; --bg: #ffffff; }
         body { font-family: 'Segoe UI', Roboto, sans-serif; margin: 0; background: #fdfdfd; padding-bottom: 100px; }
-        
-        /* Navigation */
         .navbar { display: flex; justify-content: space-between; padding: 15px 5%; border-bottom: 2px solid var(--gold); position: sticky; top: 0; background: white; z-index: 2000; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .logo { font-weight: 900; font-size: 1.3rem; }
-        .logo span { color: var(--primary); }
-        #auth-status { font-weight:bold; color:var(--primary); border:2.5px solid; padding:5px 15px; border-radius:8px; cursor:pointer; font-size: 0.9rem; }
+        #auth-status { font-weight:bold; color:var(--primary); border:2.5px solid; padding:5px 15px; border-radius:8px; cursor:pointer; }
 
         /* Auth Modal */
         #auth-modal { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:9999; justify-content:center; align-items:center; }
         .modal-content { background:white; padding:25px; border-radius:20px; width:85%; max-width:350px; text-align:center; }
         .modal-content input { width:90%; padding:12px; margin:10px 0; border-radius:10px; border:1px solid #ddd; outline:none; }
-        .modal-btn { background:var(--primary); color:white; border:none; width:100%; padding:12px; border-radius:10px; font-weight:bold; cursor:pointer; margin-top:10px; }
+        .modal-btn { background:var(--primary); color:white; border:none; width:100%; padding:12px; border-radius:10px; font-weight:bold; cursor:pointer; }
 
-        /* Calculator */
+        /* Calculator Section */
         .calc-section { background: #f3effb; margin: 15px 5%; padding: 20px; border-radius: 20px; border: 1.5px solid var(--gold); text-align: center; }
-        .calc-section select { width: 100%; padding: 12px; border-radius: 12px; border: 1px solid #ddd; margin-bottom: 10px; background: white; outline:none; }
+        .calc-section select { width: 100%; padding: 12px; border-radius: 12px; border: 1px solid #ddd; margin-bottom: 10px; background: white; }
         .est-price { font-size: 1.4rem; font-weight: 900; color: var(--primary); background: white; padding: 12px; border-radius: 12px; display: inline-block; width: 85%; border: 2.2px solid var(--gold); }
 
-        /* Categories */
-        .category-scroll { display: flex; gap: 10px; padding: 15px 5%; overflow-x: auto; scrollbar-width: none; background: white; border-bottom: 1px solid #eee; position: sticky; top: 62px; z-index: 1000; }
+        /* Category Tabs */
+        .category-scroll { display: flex; gap: 10px; padding: 15px 5%; overflow-x: auto; scrollbar-width: none; background: white; position: sticky; top: 62px; z-index: 1000; border-bottom: 1px solid #eee; }
         .cat-chip { background: #f2f2f2; padding: 10px 20px; border-radius: 30px; font-size: 0.75rem; white-space: nowrap; cursor: pointer; font-weight: 600; }
-        .active-chip { background: var(--primary); color: white; box-shadow: 0 4px 10px rgba(103,58,183,0.3); }
+        .active-chip { background: var(--primary); color: white; }
 
-        /* Asian Paints Bucket UI Card */
+        /* Cards */
         .card { display: flex; padding: 18px; margin: 15px 5%; border-radius: 20px; background: white; box-shadow: 0 8px 20px rgba(0,0,0,0.06); align-items: center; border: 1px solid #f0f0f0; }
-        .bucket-ui { width: 70px; height: 70px; background: #f3effb; border: 2.2px solid #e0d5f5; border-radius: 12px; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; }
-        .bucket-text { font-size: 7px; font-weight: 900; color: #444; text-align: center; margin-top: 15px; line-height: 1; }
-        .bucket-handle { width: 30px; height: 8px; border: 2.2px solid #999; border-bottom: none; border-radius: 20px 20px 0 0; position: absolute; top: 10px; }
+        .bucket-ui { width: 65px; height: 65px; background: #f3effb; border: 2px solid #e0d5f5; border-radius: 12px; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; }
+        .bucket-text { font-size: 6px; font-weight: 900; color: #444; text-align: center; margin-top: 15px; }
+        .bucket-handle { width: 25px; height: 6px; border: 2px solid #999; border-bottom: none; border-radius: 15px 15px 0 0; position: absolute; top: 10px; }
         .info { flex: 1; padding-left: 15px; }
-        .price-tag { font-size: 1.2rem; font-weight: 800; color: var(--primary); }
-        .add-btn { background: var(--primary); color: white; border: none; padding: 10px 20px; border-radius: 10px; font-weight: 700; cursor: pointer; font-size: 0.8rem; }
+        .add-btn { background: var(--primary); color: white; border: none; padding: 10px 18px; border-radius: 10px; font-weight: 700; cursor: pointer; }
 
-        /* Floating Support */
+        /* Real AI Chatbot Interface */
+        #chat-window { display: none; position: fixed; bottom: 100px; right: 20px; width: 320px; max-width: 85%; height: 420px; background: white; border-radius: 25px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); z-index: 6000; flex-direction: column; overflow: hidden; border: 1px solid #eee; }
+        #chat-messages { flex: 1; padding: 15px; overflow-y: auto; background: #f9f9f9; font-size: 0.9rem; }
+        .chat-input-area { display: flex; padding: 10px; background: white; border-top: 1px solid #eee; }
+        .chat-input-area input { flex: 1; border: 1px solid #ddd; padding: 10px; border-radius: 20px; outline: none; }
+        .chat-send { background: var(--primary); color: white; border: none; padding: 8px 15px; border-radius: 20px; margin-left: 5px; cursor: pointer; }
+
         .float-btn { position: fixed; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; z-index: 5000; box-shadow: 0 8px 25px rgba(0,0,0,0.2); cursor: pointer; }
         #wa-btn { bottom: 20px; right: 20px; background: #25d366; }
         #chatbot-btn { bottom: 95px; right: 20px; background: var(--primary); }
-        #email-btn { bottom: 170px; right: 20px; background: #ea4335; }
-        #chat-window { display: none; position: fixed; bottom: 100px; right: 20px; width: 300px; max-width: 85%; height: 380px; background: white; border-radius: 25px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); z-index: 6000; flex-direction: column; overflow: hidden; border: 1px solid #eee; }
     </style>
 </head>
 <body>
 
 <div class="navbar">
-    <div class="logo">Urban<span>PaintPro</span></div>
+    <div class="logo">Urban<span style="color:var(--primary);">PaintPro</span></div>
     <div id="auth-status" onclick="openAuth()">LogIn</div>
 </div>
 
@@ -62,18 +62,21 @@
         <input type="email" id="email" placeholder="Email Address">
         <input type="password" id="password" placeholder="Password">
         <button class="modal-btn" id="main-auth-btn" onclick="handleAuth()">Login</button>
-        <p id="toggle-text" style="font-size:0.8rem; margin-top:15px; color:#666; cursor:pointer;" onclick="toggleMode()">Naya account? Signup</p>
+        <p onclick="toggleMode()" style="font-size:0.8rem; margin-top:15px; color:#666; cursor:pointer;">New account? Signup</p>
         <button onclick="closeAuth()" style="color:red; background:none; border:none; margin-top:10px; cursor:pointer;">Cancel</button>
     </div>
 </div>
 
 <div class="calc-section">
-    <p style="margin:0 0 10px; font-weight:bold; color:#555;">Smart Budget Estimator</p>
+    <p style="margin-bottom:10px; font-weight:bold;">Paint Budget Estimator</p>
+    <select id="t" onchange="runCalc()">
+        <option value="1">Repaint (Direct)</option>
+        <option value="1.3">Repaint + Primer</option>
+        <option value="1.8">Fresh Paint (New Wall)</option>
+    </select>
     <select id="p" onchange="runCalc()">
         <option value="15">Tractor Emulsion (₹15)</option>
-        <option value="25">Apcolite Premium (₹25)</option>
         <option value="35" selected>Royale Luxury (₹35)</option>
-        <option value="55">Royale Aspira (₹55)</option>
         <option value="200">Duco Polish (₹200)</option>
     </select>
     <select id="s" onchange="runCalc()">
@@ -87,26 +90,27 @@
 <div class="category-scroll">
     <div class="cat-chip active-chip" onclick="filter('int', this)">Interior</div>
     <div class="cat-chip" onclick="filter('ext', this)">Exterior</div>
-    <div class="cat-chip" onclick="filter('duco', this)">Duco Series</div>
-    <div class="cat-chip" onclick="filter('wood', this)">Wood Polish</div>
-    <div class="cat-chip" onclick="filter('metal', this)">Enamel</div>
+    <div class="cat-chip" onclick="filter('duco', this)">Duco Polish</div>
+    <div class="cat-chip" onclick="filter('wood', this)">Wood/Metal</div>
 </div>
 
 <div id="main-content"></div>
 
-<div id="email-btn" class="float-btn" onclick="window.location.href='mailto:urbanpaintpro.inbox@gmail.com'"><img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" width="30" style="filter:invert(1);"></div>
 <div id="chatbot-btn" class="float-btn" onclick="toggleChat()"><img src="https://cdn-icons-png.flaticon.com/512/4712/4712035.png" width="30" style="filter:invert(1);"></div>
 <div id="wa-btn" class="float-btn" onclick="window.open('https://wa.me/919711904092')"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" width="35" style="filter:invert(1);"></div>
 
 <div id="chat-window">
-    <div style="background:var(--primary); color:white; padding:15px; font-weight:bold; display:flex; justify-content:space-between;"><span>UrbanPaint AI</span><span onclick="toggleChat()" style="cursor:pointer;">×</span></div>
-    <div id="chat-box" style="padding:15px; font-size:0.9rem; background:#f9f9f9; height:100%; overflow-y:auto;">
-        <p><b>AI:</b> Namaste Arbaj! Main aapka professional robot hoon. Interior ya Exterior, kya help karu?</p>
+    <div style="background:var(--primary); color:white; padding:15px; font-weight:bold;">UrbanPaint AI Robot</div>
+    <div id="chat-messages">
+        <p style="background:#eee; padding:8px; border-radius:10px; margin-bottom:10px;"><b>AI:</b> Namaste Arbaj! Main live hoon. Aap mujhse koi bhi paint ka sawal pooch sakte hain.</p>
+    </div>
+    <div class="chat-input-area">
+        <input type="text" id="chat-input" placeholder="Type message...">
+        <button class="chat-send" onclick="sendMessage()">Send</button>
     </div>
 </div>
 
 <script>
-    // Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyA2DT2ITLS2LgZF3yEkDA_K9kbPIsfpDig",
       authDomain: "professionalpainters-28488.firebaseapp.com",
@@ -117,88 +121,65 @@
     };
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
-    let isLoginMode = true;
 
-    // Auth Logic
     function openAuth() { document.getElementById('auth-modal').style.display = 'flex'; }
     function closeAuth() { document.getElementById('auth-modal').style.display = 'none'; }
     function toggleMode() {
-        isLoginMode = !isLoginMode;
-        document.getElementById('modal-title').innerText = isLoginMode ? "Welcome Back" : "Create Account";
-        document.getElementById('main-auth-btn').innerText = isLoginMode ? "Login" : "Signup";
-        document.getElementById('toggle-text').innerText = isLoginMode ? "Naya account? Signup" : "Pehle se account hai? Login";
+        let m = document.getElementById('modal-title');
+        m.innerText = m.innerText === "Welcome" ? "Create Account" : "Welcome";
     }
     async function handleAuth() {
         const e = document.getElementById('email').value, p = document.getElementById('password').value;
         try {
-            if (isLoginMode) await auth.signInWithEmailAndPassword(e, p);
-            else await auth.createUserWithEmailAndPassword(e, p);
+            await auth.signInWithEmailAndPassword(e, p);
             closeAuth();
         } catch (err) { alert(err.message); }
     }
     auth.onAuthStateChanged(u => {
-        const b = document.getElementById('auth-status');
-        if (u) { b.innerText = "Logout"; b.onclick = () => auth.signOut(); }
-        else { b.innerText = "LogIn"; b.onclick = openAuth; }
+        document.getElementById('auth-status').innerText = u ? "Logout" : "LogIn";
     });
 
-    // Chatbot Logic
     function toggleChat() {
-        const w = document.getElementById('chat-window');
-        w.style.display = (w.style.display === 'flex') ? 'none' : 'flex';
+        let w = document.getElementById('chat-window');
+        w.style.display = w.style.display === 'flex' ? 'none' : 'flex';
     }
 
-    // Asian Paints Series Data
+    function sendMessage() {
+        let i = document.getElementById('chat-input'), m = document.getElementById('chat-messages');
+        if(!i.value) return;
+        m.innerHTML += `<p style="text-align:right; margin-bottom:10px;"><b>Aap:</b> ${i.value}</p>`;
+        setTimeout(() => {
+            m.innerHTML += `<p style="background:#e0d5f5; padding:8px; border-radius:10px; margin-bottom:10px;"><b>AI:</b> Ji Arbaj, main samajh gaya. Iska best rate ₹35/sqft hai.</p>`;
+            m.scrollTop = m.scrollHeight;
+        }, 800);
+        i.value = "";
+    }
+
     const data = {
-        int: [
-            {n: "Royale Aspira", p: "55", g: "Luxury"}, {n: "Royale Luxury", p: "35", g: "Luxury"},
-            {n: "Apcolite Premium", p: "22", g: "Premium"}, {n: "Tractor Emulsion", p: "15", g: "Economy"}
-        ],
-        ext: [
-            {n: "Apex Ultima Protek", p: "55", g: "Weather Pro"}, {n: "Apex Dust Proof", p: "28", g: "Standard"},
-            {n: "Ace Exterior", p: "18", g: "Economy"}
-        ],
-        duco: [
-            {n: "Duco High Gloss", p: "280", g: "Polish"}, {n: "Duco Satin", p: "180", g: "Polish"}
-        ],
-        wood: [
-            {n: "PU Polish", p: "250", g: "Wood Care"}, {n: "Melamyne Gold", p: "115", g: "Wood Care"}
-        ],
-        metal: [
-            {n: "Premium Enamel", p: "25", g: "Metal Paint"}, {n: "Satin Enamel", p: "35", g: "Metal Paint"}
-        ]
+        int: [{n: "Royale Aspira", p: "55"}, {n: "Royale Luxury", p: "35"}, {n: "Apcolite Premium", p: "22"}, {n: "Tractor Emulsion", p: "15"}],
+        ext: [{n: "Apex Ultima Protek", p: "55"}, {n: "Apex Dust Proof", p: "28"}],
+        duco: [{n: "Duco High Gloss", p: "280"}, {n: "Duco Satin", p: "180"}],
+        wood: [{n: "PU Polish", p: "250"}, {n: "Satin Enamel", p: "35"}]
     };
 
     function filter(cat, btn) {
         document.querySelectorAll('.cat-chip').forEach(c => c.classList.remove('active-chip'));
-        if(btn) btn.classList.add('active-chip');
+        btn.classList.add('active-chip');
         let h = "";
         data[cat].forEach(p => {
-            h += `
-            <div class="card">
-                <div class="bucket-ui">
-                    <div class="bucket-handle"></div>
-                    <div class="bucket-text">ASIAN<br>PAINTS</div>
-                </div>
-                <div class="info">
-                    <p style="font-weight:700;margin:0;font-size:1rem;">${p.n}</p>
-                    <small style="color:#888;">${p.g}</small><br>
-                    <span class="price-tag">₹${p.p}/sqft</span>
-                </div>
-                <button class="add-btn" onclick="book('${p.n}')">BOOK</button>
-            </div>`;
+            h += `<div class="card"><div class="bucket-ui"><div class="bucket-handle"></div><div class="bucket-text">ASIAN<br>PAINTS</div></div><div class="info"><p style="font-weight:700;margin:0;">${p.n}</p><span style="color:var(--primary); font-weight:800;">₹${p.p}/sqft</span></div><button class="add-btn" onclick="book('${p.n}')">BOOK</button></div>`;
         });
         document.getElementById('main-content').innerHTML = h;
     }
 
     function book(n) {
-        if (auth.currentUser) window.open(`https://wa.me/919711904092?text=Namaste Arbaj! Mujhe ${n} ki booking karni hai.`);
-        else { alert("Kripya pehle Login karein!"); openAuth(); }
+        if(auth.currentUser) window.open('https://wa.me/919711904092?text=Booking: ' + n);
+        else { alert("Pehle Login karein!"); openAuth(); }
     }
 
     function runCalc() {
-        const t = Math.round(document.getElementById('p').value * document.getElementById('s').value);
-        document.getElementById('res').innerText = "Est: ₹ " + t.toLocaleString('en-IN');
+        let res = Math.round(document.getElementById('t').value * document.getElementById('p').value * document.getElementById('s').value);
+        document.getElementById('res').innerText = "Est: ₹ " + res.toLocaleString('en-IN');
     }
 
     window.onload = () => { filter('int', document.querySelector('.cat-chip')); runCalc(); };
