--- a/index.html
+++ b/index.html
@@ -3,119 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>UrbanPaintPro | Complete Asian Paints Solutions</title>
+    <title>UrbanPaintPro | Professional Painting</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
     <style>
-        :root { --primary: #673ab7; --gold: #d4af37; --bg: #fdfdfd; }
-        body { font-family: 'Segoe UI', Roboto, sans-serif; margin: 0; background: var(--bg); padding-bottom: 120px; color: #333; }
-        
-        /* Urban Company Style Navbar */
-        .navbar { display: flex; justify-content: space-between; padding: 18px 6%; background: white; position: sticky; top: 0; z-index: 2000; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
-        .logo { font-weight: 900; font-size: 1.4rem; letter-spacing: -0.5px; }
+        :root { --primary: #673ab7; --gold: #d4af37; --bg: #f8f9fa; }
+        body { font-family: 'Segoe UI', sans-serif; margin: 0; background: var(--bg); padding-bottom: 120px; }
+        .navbar { display: flex; justify-content: space-between; padding: 18px 6%; background: white; position: sticky; top: 0; z-index: 2000; align-items: center; box-shadow: 0 2px 8px rgba(0,0,0,0.06); }
+        .logo { font-weight: 800; font-size: 1.4rem; }
         .logo span { color: var(--primary); }
-        #auth-status { font-weight: 700; color: var(--primary); border: 2px solid var(--primary); padding: 6px 16px; border-radius: 8px; cursor: pointer; font-size: 0.85rem; }
+        #auth-status { font-weight: 700; color: var(--primary); border: 1.5px solid var(--primary); padding: 7px 18px; border-radius: 8px; cursor: pointer; font-size: 0.85rem; }
 
-        /* Premium Calculator Card */
-        .calc-card { background: white; margin: 20px 5%; padding: 25px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.06); border-top: 5px solid var(--primary); text-align: center; }
-        .calc-card select { width: 100%; padding: 14px; border-radius: 12px; border: 1px solid #eee; margin-bottom: 12px; font-size: 0.95rem; outline:none; }
+        /* Calculator */
+        .calc-section { background: white; margin: 20px 5%; padding: 25px; border-radius: 20px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); text-align: center; border-left: 5px solid var(--primary); }
+        .calc-section select { width: 100%; padding: 14px; border-radius: 10px; border: 1px solid #eee; margin-bottom: 12px; outline: none; }
         .price-display { font-size: 1.8rem; font-weight: 800; display: block; margin: 15px 0; color: #000; }
         .main-book-btn { background: #000; color: #fff; border: none; width: 100%; padding: 16px; border-radius: 12px; font-weight: 700; cursor: pointer; }
 
-        /* Asian Paints Series Tabs */
-        .tabs { display: flex; gap: 12px; padding: 15px 5%; overflow-x: auto; background: white; border-bottom: 1px solid #f0f0f0; position: sticky; top: 70px; z-index: 1000; scrollbar-width: none; }
-        .tab { background: #f2f2f2; padding: 10px 22px; border-radius: 50px; font-size: 0.8rem; white-space: nowrap; cursor: pointer; font-weight: 600; color: #555; }
-        .active-tab { background: var(--primary); color: white; }
-
-        /* Product Cards */
-        .paint-card { display: flex; padding: 20px; margin: 15px 5%; border-radius: 18px; background: white; box-shadow: 0 4px 15px rgba(0,0,0,0.03); align-items: center; border: 1px solid #f1f1f1; }
-        .bucket-icon { width: 60px; height: 60px; background: #f3effb; border-radius: 14px; position: relative; display: flex; align-items: center; justify-content: center; border: 1px solid #e0d5f5; }
-        .bucket-text { font-size: 5px; font-weight: 900; color: #555; text-align: center; margin-top: 15px; }
-        .info { flex: 1; padding-left: 18px; }
-        .info h4 { margin: 0; font-size: 0.95rem; }
+        /* Asian Paints Cards */
+        .card { display: flex; padding: 20px; margin: 15px 5%; border-radius: 16px; background: white; box-shadow: 0 2px 12px rgba(0,0,0,0.04); align-items: center; border: 1px solid #f1f1f1; }
+        .info { flex: 1; padding-left: 15px; }
+        .info h4 { margin: 0; font-size: 1rem; }
         .info span { color: var(--primary); font-weight: 800; font-size: 1.1rem; }
-        .book-now { background: white; color: var(--primary); border: 1.5px solid var(--primary); padding: 8px 18px; border-radius: 8px; font-weight: 700; cursor: pointer; }
+        .add-btn { background: white; color: var(--primary); border: 1.5px solid var(--primary); padding: 8px 18px; border-radius: 8px; font-weight: 700; cursor: pointer; }
 
-        /* Booking Form Modal */
-        #form-modal { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); z-index:10000; justify-content:center; align-items:center; }
-        .modal-body { background:white; padding:30px; border-radius:24px; width:85%; max-width:400px; text-align:center; }
-        .modal-body input, .modal-body textarea { width:90%; padding:14px; margin:10px 0; border-radius:12px; border:1px solid #ddd; font-size: 1rem; }
+        /* Modals */
+        #auth-modal, #form-modal { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:10000; justify-content:center; align-items:center; }
+        .modal-box { background:white; padding:25px; border-radius:24px; width:85%; max-width:380px; text-align:center; }
+        .modal-box input, .modal-box textarea { width:92%; padding:14px; margin:10px 0; border-radius:12px; border:1px solid #ddd; }
         .confirm-btn { background: var(--primary); color: white; border: none; width: 100%; padding: 16px; border-radius: 12px; font-weight: bold; cursor: pointer; }
 
-        /* Support FABs */
-        .fab { position: fixed; width: 56px; height: 56px; border-radius: 50%; display: flex; align-items: center; justify-content: center; z-index: 5000; box-shadow: 0 5px 20px rgba(0,0,0,0.15); cursor: pointer; }
+        /* Floating UI */
+        .fab { position: fixed; width: 56px; height: 56px; border-radius: 50%; display: flex; align-items: center; justify-content: center; z-index: 5000; box-shadow: 0 4px 15px rgba(0,0,0,0.15); cursor: pointer; }
         #wa { bottom: 25px; right: 20px; background: #25d366; }
         #mail { bottom: 95px; right: 20px; background: #ea4335; }
-        #chatbot-btn { bottom: 165px; right: 20px; background: var(--primary); }
-
-        /* Chat Window */
-        #chat-window { display: none; position: fixed; bottom: 100px; right: 20px; width: 320px; max-width: 85%; height: 420px; background: white; border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.2); z-index: 6000; flex-direction: column; overflow: hidden; border: 1px solid #eee; }
-        #chat-messages { flex: 1; padding: 15px; overflow-y: auto; background: #f9f9f9; display: flex; flex-direction: column; gap: 10px; }
-        .bot-msg { background: #e0d5f5; padding: 10px; border-radius: 15px; align-self: flex-start; font-size: 0.9rem; }
-        .user-msg { background: var(--primary); color: white; padding: 10px; border-radius: 15px; align-self: flex-end; font-size: 0.9rem; }
     </style>
 </head>
 <body>
 
 <div class="navbar">
     <div class="logo">Urban<span>PaintPro</span></div>
-    <div id="auth-status" onclick="openAuth()">LogIn</div>
+    <div id="auth-status">LogIn</div>
 </div>
 
-<div class="calc-card">
-    <p style="margin:0 0 10px; font-weight:600; color:#777;">Home Paint Estimator</p>
-    <select id="type" onchange="runCalc()">
-        <option value="1">Repaint (1-2 Coats)</option>
-        <option value="1.6">Repaint + Primer (Smooth)</option>
-        <option value="2.8">Fresh Paint (Putty + Primer + Paint)</option>
-    </select>
-    <select id="product" onchange="runCalc()">
-        <option value="16">Tractor Emulsion (Economy)</option>
-        <option value="28">Apcolite Premium (Standard)</option>
-        <option value="42" selected>Royale Luxury (Premium)</option>
-        <option value="60">Royale Aspira (Luxury)</option>
-        <option value="70">Waterproofing + Paint</option>
-    </select>
-    <select id="size" onchange="runCalc()">
-        <option value="400">1 BHK (Standard)</option>
-        <option value="950">2 BHK (Standard)</option>
-        <option value="1500">3 BHK (Standard)</option>
-    </select>
-    <span class="price-display" id="total">₹ 16,800</span>
-    <button class="main-book-btn" onclick="openForm('Measurement Booking')">Book Instant Measurement</button>
-</div>
-
-<div class="tabs">
-    <div class="tab active-tab" onclick="loadContent('int', this)">Interior</div>
-    <div class="tab" onclick="loadContent('ext', this)">Exterior</div>
-    <div class="tab" onclick="loadContent('wp', this)">Waterproofing</div>
-    <div class="tab" onclick="loadContent('tex', this)">Textures</div>
-    <div class="tab" onclick="loadContent('duco', this)">Duco/PU</div>
-</div>
-
-<div id="list"></div>
-
-<div id="form-modal">
-    <div class="modal-body">
-        <h3 id="srv-title">Book Order</h3>
-        <input type="text" id="name" placeholder="Full Name">
-        <input type="tel" id="phone" placeholder="Mobile Number">
-        <textarea id="addr" placeholder="Address for Measurement"></textarea>
-        <button class="confirm-btn" onclick="submitOrder()">Confirm Booking</button>
-        <p onclick="closeForm()" style="color:red; cursor:pointer; margin-top:15px;">Cancel</p>
+<div id="auth-modal">
+    <div class="modal-box">
+        <h3>Login / Signup</h3>
+        <input type="email" id="email" placeholder="Email">
+        <input type="password" id="password" placeholder="Password">
+        <button class="confirm-btn" onclick="handleAuth()">Submit</button>
+        <p onclick="closeAuth()" style="color:red; margin-top:15px; cursor:pointer;">Cancel</p>
     </div>
 </div>
 
-<div id="chatbot-btn" class="fab" onclick="toggleChat()"><img src="https://cdn-icons-png.flaticon.com/512/4712/4712035.png" width="28" style="filter:invert(1);"></div>
+<div id="form-modal">
+    <div class="modal-box">
+        <h3 id="srv-title">Book Service</h3>
+        <input type="text" id="cust-name" placeholder="Aapka Naam">
+        <input type="tel" id="cust-phone" placeholder="Phone Number">
+        <textarea id="cust-addr" placeholder="Address"></textarea>
+        <button class="confirm-btn" onclick="submitOrder()">Confirm Order</button>
+        <p onclick="closeBooking()" style="color:red; margin-top:15px; cursor:pointer;">Close</p>
+    </div>
+</div>
+
+<div class="calc-section">
+    <p style="color:#666; font-weight:600;">Home Paint Estimator</p>
+    <select id="t" onchange="runCalc()"><option value="1">Repaint</option><option value="2.5">Fresh Paint</option></select>
+    <select id="p" onchange="runCalc()"><option value="42">Royale Luxury</option><option value="16">Tractor Emulsion</option></select>
+    <select id="s" onchange="runCalc()"><option value="400">1 BHK</option><option value="950">2 BHK</option></select>
+    <span class="price-display" id="res">₹ 16,800</span>
+    <button class="main-book-btn" onclick="openBooking('Custom Estimate')">Instant Booking</button>
+</div>
+
+<div id="paint-list"></div>
+
 <div id="mail" class="fab" onclick="window.open('mailto:urbanpaintpro.inbox@gmail.com')"><img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" width="28" style="filter:invert(1);"></div>
 <div id="wa" class="fab" onclick="window.open('https://wa.me/919711904092')"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" width="32" style="filter:invert(1);"></div>
-
-<div id="chat-window">
-    <div style="background:var(--primary); color:white; padding:15px; font-weight:700;">Urban AI Robot</div>
-    <div id="chat-messages"><div class="bot-msg">Namaste Arbaj! Main live hoon. Aapka painting budget aur waterproofing mein help kar sakta hoon.</div></div>
-    <div style="padding:10px; display:flex;"><input type="text" id="chat-in" style="flex:1; padding:10px; border-radius:20px; border:1px solid #ddd;"><button onclick="sendMsg()" style="border:none; background:none; color:var(--primary); font-weight:700; margin-left:10px;">Send</button></div>
-</div>
 
 <script>
     const firebaseConfig = {
@@ -130,49 +95,65 @@
     const auth = firebase.auth();
     const db = firebase.firestore();
 
-    let selSrv = "";
-    function openForm(s) { if(!auth.currentUser){alert("Pehle Login karein!"); return;} selSrv=s; document.getElementById('form-modal').style.display='flex'; }
-    function closeForm() { document.getElementById('form-modal').style.display='none'; }
+    // Fixed Login/Logout Functionality
+    auth.onAuthStateChanged(user => {
+        const btn = document.getElementById('auth-status');
+        if (user) {
+            btn.innerText = "Logout";
+            btn.onclick = () => auth.signOut().then(() => window.location.reload());
+        } else {
+            btn.innerText = "LogIn";
+            btn.onclick = () => document.getElementById('auth-modal').style.display = 'flex';
+        }
+    });
 
-    async function submitOrder() {
-        const n=document.getElementById('name').value, p=document.getElementById('phone').value, a=document.getElementById('addr').value;
-        if(!n||!p||!a) return alert("Fill all details");
-        await db.collection("orders").add({ name:n, phone:p, address:a, service:selSrv, estimate:document.getElementById('total').innerText, time:new Date().toLocaleString() });
-        alert("Order Booked! Hum aapse sampark karenge."); closeForm();
+    async function handleAuth() {
+        const e = document.getElementById('email').value, p = document.getElementById('password').value;
+        try {
+            await auth.signInWithEmailAndPassword(e, p).catch(() => auth.createUserWithEmailAndPassword(e, p));
+            document.getElementById('auth-modal').style.display = 'none';
+        } catch (err) { alert(err.message); }
     }
 
-    const data = {
-        int: [{n:"Royale Aspira", p:"60"}, {n:"Royale Luxury", p:"42"}, {n:"Apcolite Premium", p:"28"}, {n:"Tractor Emulsion", p:"16"}],
-        ext: [{n:"Apex Ultima Protek", p:"68"}, {n:"Apex Dust Proof", p:"32"}, {n:"Ace Exterior", p:"18"}],
-        wp: [{n:"Damp Proof (Warranty)", p:"75"}, {n:"SmartCare Leakage", p:"55"}, {n:"Tile Waterproofing", p:"90"}],
-        tex: [{n:"Royale Play Safari", p:"120"}, {n:"Metallics Stucco", p:"150"}, {n:"Exterior Textures", p:"85"}],
-        duco: [{n:"PU Luxury Polish", p:"450"}, {n:"Duco High Gloss", p:"260"}]
-    };
+    function closeAuth() { document.getElementById('auth-modal').style.display = 'none'; }
 
-    function loadContent(cat, el) {
-        document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active-tab'));
-        el.classList.add('active-tab');
-        let h = "";
-        data[cat].forEach(p=>{
-            h += `<div class="paint-card"><div class="bucket-icon"><small>ASIAN</small></div><div class="info"><h4>${p.n}</h4><span>₹${p.p}/sqft</span></div><button class="book-now" onclick="openForm('${p.n}')">Book</button></div>`;
-        });
-        document.getElementById('list').innerHTML = h;
+    // Booking & Firestore System
+    let selSrv = "";
+    function openBooking(s) {
+        if(!auth.currentUser) { alert("Pehle Login karein!"); return; }
+        selSrv = s;
+        document.getElementById('form-modal').style.display = 'flex';
+    }
+    function closeBooking() { document.getElementById('form-modal').style.display = 'none'; }
+
+    async function submitOrder() {
+        const n = document.getElementById('cust-name').value, p = document.getElementById('cust-phone').value, a = document.getElementById('cust-addr').value;
+        if(!n || !p || !a) return alert("Details bhariye!");
+        try {
+            await db.collection("orders").add({ name: n, phone: p, address: a, service: selSrv, estimate: document.getElementById('res').innerText, time: new Date().toLocaleString() });
+            alert("Order Success! Hum aapse sampark karenge.");
+            closeBooking();
+        } catch(e) { alert(e.message); }
     }
 
     function runCalc() {
-        let res = Math.round(document.getElementById('type').value * document.getElementById('product').value * document.getElementById('size').value);
-        document.getElementById('total').innerText = "₹ " + res.toLocaleString('en-IN');
+        let res = Math.round(document.getElementById('t').value * document.getElementById('p').value * document.getElementById('s').value);
+        document.getElementById('res').innerText = "₹ " + res.toLocaleString('en-IN');
     }
 
-    function toggleChat() { let w=document.getElementById('chat-window'); w.style.display=w.style.display==='flex'?'none':'flex'; }
-    function sendMsg() { 
-        let i=document.getElementById('chat-in'), m=document.getElementById('chat-messages'); 
-        if(!i.value) return; m.innerHTML+=`<div class="user-msg">${i.value}</div>`; 
-        setTimeout(()=>{ m.innerHTML+=`<div class="bot-msg">Ji, Asian Paints Royale Aspira best choice hai. Aap booking form bhar dein.</div>`; m.scrollTop=m.scrollHeight; }, 700); i.value=""; 
+    const data = {
+        int: [{n: "Royale Aspira", p: "60"}, {n: "Royale Luxury", p: "42"}, {n: "Tractor Emulsion", p: "16"}]
+    };
+
+    function load() {
+        let h = "";
+        data.int.forEach(p => {
+            h += `<div class="card"><div class="info"><h4>${p.n}</h4><span>₹${p.p}/sqft</span></div><button class="add-btn" onclick="openBooking('${p.n}')">Book</button></div>`;
+        });
+        document.getElementById('paint-list').innerHTML = h;
     }
 
-    auth.onAuthStateChanged(u=>{ document.getElementById('auth-status').innerText=u?"Logout":"LogIn"; });
-    window.onload=()=>{ loadContent('int', document.querySelector('.active-tab')); runCalc(); };
+    window.onload = () => { load(); runCalc(); };
 </script>
 </body>
 </html>
